# WorkbenchOS

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
Applications/InputServer/: main.cpp
Applications/WindowServer/: main.cpp
Bootloader/: BootConsole.cpp  BootConsole.h  CMakeLists.txt  main.cpp
Experiments/Bootloader/: Cargo.toml
Experiments/Bootloader/.cargo/: config.toml
Experiments/Bootloader/src/: debug.rs  main.rs  uefi.rs
Experiments/Bootloader/src/uefi/: boot_services.rs  file.rs  graphics_output_protocol.rs  loaded_image_protocol.rs  protocol_handler.rs  simple_file_system_protocol.rs  status.rs  tables.rs
Experiments/Kernel/: Cargo.toml  x86_64-kernel-target.json  x86_64-kernel.ld
Experiments/Kernel/.cargo/: config.toml
Experiments/Kernel/src/: apic.rs  boot.rs  debug.rs  exceptions.rs  gdt.rs  ivt.rs  main.rs  memory_types.rs  platform.rs
Kernel/: APIC.cpp  APIC.h  ApInit.S  CMakeLists.txt  CxxAbi.cpp  Debugging.cpp  Debugging.h  ElfLoader.cpp  ElfLoader.h  Exceptions.cpp  Exceptions.h  InterruptVectorTable.cpp  InterruptVectorTable.h  Mutex.cpp  Mutex.h  Processor.cpp  Processor.h  idt.cpp  linker.ld  main.cpp
Kernel/ACPI/: ACPI.cpp  ACPI.h  ACPICA.cpp  ACPICA.h  DescriptorTables.cpp  DescriptorTables.h
Kernel/BootConsole/: Console.cpp  Console.h  ConsoleFont.h
Kernel/Bus/: PCI.cpp  PCI.h  Ports.h
Kernel/Devices/: BlockDevice.h  BlockDeviceReader.cpp  BlockDeviceReader.h  MemoryBlockDevice.cpp  MemoryBlockDevice.h  PS2Keyboard.cpp  PS2Keyboard.h  PS2Mouse.cpp  PS2Mouse.h  VirtioBlockDevice.cpp  VirtioBlockDevice.h  VirtioNetworkDevice.cpp  VirtioNetworkDevice.h
Kernel/Filesystems/: Fat32.cpp  Fat32.h  RamdiskFS.cpp  RamdiskFS.h  SquashFS.cpp  SquashFS.h  VFS.cpp  VFS.h
Kernel/Heap/: Kmalloc.cpp  Kmalloc.h  SlabAllocator.cpp  SlabAllocator.h
Kernel/Interfaces/: PCI.cpp  PCI.h  Ports.h
Kernel/Memory/: AddressSpace.cpp  AddressSpace.h  Bitmap.cpp  Bitmap.h  MemoryManager.cpp  MemoryManager.h  PhysicalAddress.h  Region.cpp  Region.h  VirtualAddress.cpp  VirtualAddress.h
Kernel/Platform/x86_64/: Entrypoint.cpp  PIC.cpp  PIC.h  PortIO.cpp  PortIO.h
Kernel/Process/: Process.cpp  Process.h  ProcessManager.cpp  ProcessManager.h  StackFrame.h  Thread.cpp  Thread.h
Libraries/: CMakeLists.txt
Libraries/LibACPICA/ACPICA/source/include/: actypes.h
Libraries/LibACPICA/ACPICA/source/include/platform/: acenv.h  acgcc.h  acworkbenchos.h
Libraries/LibELF/: CMakeLists.txt  ELF.cpp  ELF.h
Libraries/LibStd/: CMakeLists.txt  CString.cpp  CString.h  Convert.cpp  Convert.h  Error.h  Format.cpp  Format.h  Iterator.h  NonNullPtr.h  Optional.h  Path.cpp  Path.h  RefPtr.h  Result.h  Stack.cpp  Stack.h  String.cpp  String.h  StringSplitter.cpp  StringSplitter.h  StringView.cpp  StringView.h  Try.h  Types.h  Vector.h
Libraries/LibStd/tests/: CMakeLists.txt  vector.cpp
Libraries/LibTestable/: CMakeLists.txt  Test.cpp  Test.h
Tools/: addr-to-bootloader.py  kernel-diagnostics.py  parse-bootloader.py
Tools/web/: index.html  style.css
Tools/web-dev/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
Tools/web-dev/src/: index.html  styles.scss
Tools/web-dev/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  hex.pipe.ts
Tools/web-dev/src/app/interrupt-descriptor-table/: interrupt-descriptor-table.component.html  interrupt-descriptor-table.component.spec.ts  interrupt-descriptor-table.component.ts
Tools/web-dev/src/app/models/: interrupt-descriptor.ts  registers.ts
Tools/web-dev/src/app/services/: backend.service.ts
